# RomanVoice

./: .gitignore  AGENTS.md  README.md  app_qt.py  config.py  install.cmd  pyproject.toml  requirements.txt  uninstall.cmd
clients/android-ime/: .gitignore  README.md  build-debug-apk.ps1  install-to-connected-phone.ps1  settings.gradle
scripts/: ensure-romanvoice-running.ps1  install-background-watchdog.ps1  install.ps1  mic_level_check.py  openwhisper.cmd  ow.cmd  phase1_smoke_test.py  remove-background-watchdog.ps1  restore-default-hotkeys.ps1  romanvoice-background.cmd  romanvoice-ui.cmd  romanvoice.cmd  uninstall.ps1  use-safe-hotkeys.ps1  use-win-h-hotkey.ps1  watch-romanvoice-background.ps1
services/: application_controller.py  database.py  dictation_service.py  gpu_guard.py  history_manager.py  hotkey_manager.py  polisher.py  recorder.py  settings.py  streaming_transcriber.py  streaming_transcript_guard.py  text_injector.py  websocket_protocol.py  win32_hotkey_manager.py
services/runtime/: hotkeys.py  (+2 more)
specs/: upload-file-tab.md
tests/: test_android_ime_scripts.py  test_android_text_range_java.py  test_app_qt_entrypoint.py  test_application_controller.py  test_bootstrap.py  test_chunking.py  test_dictation_service.py  test_hotkey_manager.py  test_polisher.py  test_recorder.py  test_settings.py  test_startup_profiler.py  test_startup_scripts.py  test_text_injector.py  test_transcript_cleanup.py  test_win32_hotkey_manager.py
transcriber/: local_backend.py
ui_qt/: bootstrap.py  loading_screen.py  main_window.py  startup_profiler.py  ui_controller.py
(+25 files in other folders)
