[project]
name = "romanvoice"
version = "0.1.0"
description = "Local-first Windows dictation app forked from OpenWhisper."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
    "openai>=1.3.0",
    "pyperclip>=1.8.2",
    "faster-whisper==1.2.1",
    "ctranslate2==4.7.1",
    "python-dotenv>=1.0.0",
    "PyQt6>=6.0.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
